Fix spacing and positioning; remove unwanted iOS styles

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: flex-end;
 
-    padding: 2rem 1rem 1rem;
+    padding: 2rem 1rem;
 
     /*min-height: calc(100vh - 5rem);*/
     width: calc(100% - 2rem);
@@ -47,7 +47,7 @@
 
 @media (min-width: breakpoints.$mobile) {     
     .Footer {
-        padding: 2rem 2rem 1rem;
+        padding: 2rem;
         
         /*min-height: calc(100vh - 5rem);*/
         
@@ -63,7 +63,7 @@
     .Footer {
         /*min-height: calc(100vh - 5rem);*/
 
-        padding: 4rem 2rem 1rem;
+        padding: 4rem 2rem;
 
         .getInTouch {
             width: 62%;
